<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:clickable="true"
                android:layout_height="match_parent"
                xmlns:fresco="http://schemas.android.com/tools"
                android:background="@color/theme_color">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@mipmap/sign_bg" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_bg_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <com.facebook.drawee.view.SimpleDraweeView
              xmlns:fresco="http://schemas.android.com/apk/res-auto"
              android:id="@+id/profile_image"
              android:layout_width="100dp"
              android:layout_height="100dp"
              android:layout_centerInParent="true"
              fresco:actualImageScaleType="fitCenter"
              fresco:placeholderImage="@mipmap/default_avatar"
              fresco:placeholderImageScaleType="centerCrop"
              fresco:backgroundImage="@mipmap/default_avatar"
              fresco:roundAsCircle="true"
              />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@color/gray_bg_color"
                android:src="@mipmap/ic_menu" />

            <EditText
                android:id="@+id/phonenum_et"
                android:layout_width="match_parent"
                android:layout_height="50dp"

                android:background="@color/white_gray_color"
                android:gravity="center"
                android:hint="@string/input_phonenum"
                android:textColor="@color/text_color"
                android:textColorHint="@color/gray_text_color" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:background="@color/white_gray_color"
                android:src="@mipmap/ic_menu" />

            <EditText

                android:id="@+id/pwd_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/gray_bg_color"
                android:gravity="center"
                android:hint="@string/please_input_acount"
                android:textColor="@color/text_color"
                android:textColorHint="@color/gray_text_color" />
        </LinearLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/getcode_shape"
            android:text="@string/please_input_pwd"
            android:textColor="@color/text_color" />
        <TextView

            android:textColor="@color/text_color"
            android:layout_marginTop="10dp"
            android:text="@string/forget_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_forget_tv" />
    </LinearLayout>

    <TextView
        android:id="@+id/goto_register_tv"
        android:text="@string/register_now"
        android:layout_centerHorizontal="true"
        android:textColor="@color/text_color"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>
