<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true">
    <!--<include layout="@layout/common_toolbar"/>-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <com.facebook.drawee.view.SimpleDraweeView
                xmlns:fresco="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                fresco:actualImageScaleType="fitCenter"
                fresco:placeholderImage="@mipmap/icon"
                fresco:placeholderImageScaleType="centerCrop"
                fresco:roundAsCircle="true"
                />

        </RelativeLayout>

        <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_marginTop="30dp"-->
        <!--android:orientation="horizontal">-->

        <!--<EditText-->
        <!--android:id="@+id/phonenum_et"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="50dp"-->


        <!--android:hint="@string/please_input_phonenum"-->
        <!--android:paddingLeft="20dp"-->
        <!--android:gravity="left|center_vertical"-->

        <!--/>-->
        <!--</LinearLayout>-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/usernameWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/phonenum_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/account"
                android:inputType="phone"
                android:paddingLeft="15dp"
                android:text="18311362506"
                android:textSize="15sp"/>

        </android.support.design.widget.TextInputLayout>


        <!--<android.support.design.widget.TextInputLayout-->
        <!--android:id="@+id/password_rapper"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginLeft="10dp"-->
        <!--android:layout_marginTop="10dp">-->

        <!--<EditText-->
        <!--android:text="111111"-->
        <!--android:paddingLeft="15dp"-->
        <!--android:id="@+id/pwd_et"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:hint="@string/password_signin"-->
        <!--android:inputType="textPassword"-->

        <!--android:textSize="15sp"/>-->

        <!--</android.support.design.widget.TextInputLayout>-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_rapper"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
               >

            <EditText
                android:id="@+id/verifycode_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_signin"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                android:textSize="15sp"/>

            </android.support.design.widget.TextInputLayout>
            <cn.ifreedomer.beauty.widget.TimeView
                android:id="@+id/getcode_tv"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:drawableLeft="@mipmap/shu_line"
                android:gravity="center"
                android:text="获取验证码"

                android:textSize="15sp"
                android:background="@color/defaultBtnColor"/>
        </LinearLayout>

        <Button
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:text="@string/register_title"
            />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/agree_ower_layer"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/go_login_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:text="@string/login_now"
        />

</RelativeLayout>
